<resources>
    <string name="app_name">AndroidSimpleTrainer001</string>

    <!-- 0. Common Labels -->
    <string name="btnLblToMainActivity">To Main Act</string>
    <string name="btnLblShowPopup">Show Popup</string>
    <string name="btnLblBackToIndex">Back to index samples</string>
    <string name="txtEditLblEnterText">Enter text here</string>
    <string name="txtLblParam1">Param 1: </string>
    <string name="txtLblParam2">Param 2:</string>
    <string name="btnLblExecute">Execute</string>

    <!-- 1. SplashScreen config -->
    <string name="title_activity_splash">SplashActivity</string>
    <string name="welcome">Welcome to\nTraining App</string>
    <string name="title_activity_linear_layout">LinearLayoutActivity</string>
    <string name="title_activity_linear_layout_horizontal">LinearLayoutHorizontal</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- 2. Main activity -->
    <string name="txtLblMainActivity">Welcome to main trainer activity</string>
    <string name="btnLblToSecondActivity">To Second Actv</string>
    <string name="btnLblToDynaTable">To DynaTable</string>
    <string name="btnLblToMDActivity">To MD Actv</string>
    <string name="btnLblToDBActivity">To DB Actv</string>
    <string name="btnLblToFragmentActivity">To Frgmt Actv</string>
    <string name="btnLblToAsyncActivity">To Async Actv</string>
    <string name="btnLblToRetrofitActivity">To Retrofit Actv</string>
    <string name="btnLblToBasicUIActivity">To BasicUI Actv</string>
    <string name="btnLblToArchitectureActivity">To Arch Act</string>
    <string name="btnLblToAboutActivity">About This App</string>

    <!-- 3. Second activity -->
    <string name="txtLblSecondActivity">This is the second activity</string>
    <string name="txtLblSharedDataMainActivity">Shared data with MainActivity</string>

    <!-- 4. DynamicTableSampleIndexActivity -->
    <string name="txtLblDynamicTableSampleIndexActivity">DynamicTableSampleIndexActivity samples</string>
    <string name="btnLblToExample1">To Example 1</string>
    <string name="btnLblToExample2">To Example 2</string>
    <string name="btnLblToIndexSamplePage">To Index Sample</string>
    <string name="txtLblDynamicTableSampleExample2">DynamicTable Sample 2</string>

    <!-- Example1 -->
    <string name="txtLblDynamicTableSample1">Dynamic table example</string>

    <!-- DateTimePicker -->
    <string name="txtLblDateTimePickerIndex">Date and Time picker examples</string>
    <string name="txtLblDateTimePicker">Date and Time picker example 1</string>

    <!-- Database -->
    <string name="txtLblDatabaseIndex">Database examples</string>
    <string name="txtLblDatabaseCRUD">Database CRUD example 1</string>
    <string name="txtLblDatabaseCRUDROOM1">Database CRUD example with ROOM - 1</string>
    <string name="btnLabelCreate">Create</string>
    <string name="btnLabelRead">Read</string>
    <string name="btnLabelUpdate">Update</string>
    <string name="btnLabelUpdateById">Update by id</string>
    <string name="btnLabelDelete">Delete</string>
    <string name="btnLabelDeleteById">Delete by id</string>
    <string name="btnLabelDeleteAll">Delete All</string>
    <string name="txtLblName">Name</string>
    <string name="txtLblSurname">Surname</string>
    <string name="txtInputName">SampleName</string>
    <string name="txtInputSurname">SampleSurname</string>

    <!-- AsyncTaskExample1Activity -->
    <string name="btnLblCallAsyncTask1">Call asyncTask 1</string>

    <!-- AsyncTaskExample1Activity -->
    <string name="txtLblRetrofitActivity">Retrofit examples</string>
    <string name="txtLblRetrofitExample1">Retrofit example 1</string>

    <!-- CustomDate Activity -->
    <string name="btnLblToCustomDatePicker">To Custom DatePicker</string>
    <string name="btnLblPickAFirstDateTime">Pick a First\nDateTime</string>
    <string name="btnLblPickASecondDateTime">Pick a Second\nDateTime</string>
    <string name="btnLblSelect">Select</string>
    <string name="btnLblExecDateOperation">Exec date operations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Basic UI -->
    <string name="txtLblBasicUI">Basic UI Example Index</string>
    <string name="txtLblAutocomplete">Basic Autocomplete Example</string>
    <string name="txtLblAutocompleteObjList">Autocomplete Object List</string>
    <string name="txtLblAutocompleteObjListWithRoom">Autocomplete with ROOM DB filter</string>

    <!-- Architecture -->
    <string name="txtLblWelcomeArchitetureIndex">Welcome to Architecture index samples</string>

    <!-- MVPEmployeeSampleActivity -->
    <string name="txtLblWelcomeMVPSimpleEmployeeIndex">Welcome to MVP Simple Employee Example</string>
    <string name="txtLblWelcomeMVPSimpleEmployeeIndexHelp">Please insert text into Edit Textbox</string>

    <!-- About Activity -->
    <string name="txtLblWelcomeAboutActivity">Welcome to About Activity.</string>

    <!-- Retrofit -->
    <string name="txtLblUrl">Url:</string>

</resources>
